bugfix css: pas de text-align aussi global

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -972,7 +972,6 @@ ul>li.player>a {
   -moz-box-sizing:    border-box;
   -webkit-box-sizing: border-box;
   box-sizing:        border-box;
-  text-align:center;
 }
 
 .blue-screen.player-form .container {
